# Drumforge

./: .gitignore  CMakeLists.txt  README.md  TODO.md
include/: airspace.h  camera.h  membrane.h  shader.h
legacy/include/: membrane.h
legacy/src/: airspace.cpp  camera.cpp  main.cpp  shader.cpp
parallel/include/: air_cavity_component.h  air_cavity_kernels.cuh  audio_manager.h  body_component.h  body_kernels.cuh  camera.h  component_interface.h  cuda_gl_buffer.h  cuda_memory_manager.h  gui_manager.h  input_handler.h  membrane_component.h  membrane_kernels.cuh  simple_body_resonator.h  simulation_manager.h  visualization_manager.h
parallel/src/: air_cavity_component.cpp  air_cavity_kernels.cu  audio_manager.cpp  body_component.cpp  body_kernels.cu  camera.cpp  cuda_gl_buffer.cu  cuda_memory_manager.cu  gui_manager.cpp  input_handler.cpp  main.cpp  membrane_component.cpp  membrane_kernels.cu  simple_body_resonator.cpp  simulation_manager.cpp  visualization_manager.cpp
shaders/: point_fragment.glsl  point_vertex.glsl
src/: airspace.cpp  cuda_test.cu  main.cpp  membrane.cpp  shader.cpp  test_cuda_main.cpp
